# mujoco_sysid_bug

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  a1_conditioning.py  a2_bounds.py  a3_recovery.py  a4_regularization.py  a5_excitation.py  a6_excitation_design.py  a7_initialization.py  base.xml  common.py  mujoco_model_parameters.json  mujoco_sysid_bug.py  pyproject.toml  realistic.py  target.xml  traj1.npz  traj10.npz  traj2.npz  traj3.npz  traj4.npz  traj5.npz  traj6.npz  traj7.npz  traj8.npz  traj9.npz
